--- a/app/_data/en/general/basic.yml
+++ b/app/_data/en/general/basic.yml
@@ -18,10 +18,10 @@ organizerAlternateName: "Google Developer Group SunCoast"
 organizerDescription: "Open and volunteer geek communities who create exciting projects and share experience about Google technology with passion."
 organizerEmail: "lviv@gdg.org.ua"
 organizerLogo: "/img/seo/organizer-logo.png"
-organizerLink: "http://lviv.gdg.org.ua/"
+organizerLink: "http://www.gdgsuncoast.org"
 
 # Documents
-c4pUrl: "http://bit.ly/dfua-c4p"
+c4pUrl: "http://goo.gl/forms/HeDDWzxqZX"
 c4pButton: "Become a speaker"
 
 # Varibles
