--- a/app/_data/en/general/navigation.yml
+++ b/app/_data/en/general/navigation.yml
@@ -14,6 +14,6 @@ links:
  #    - {link: "https://twitter.com/intent/user?screen_name=GDGLviv", text: "@GDGLviv"}
  #    - {link: "https://facebook.com/GDGLviv", text: "GDGLviv"}
 bottomLinks:
- - {link: "#", text: "Become a speaker"}
+ - {link: "http://goo.gl/forms/HXcQUylPzp", text: "Become a speaker"}
 rightButtons:
- - {link: "#", text: "Become a speaker"}
+ - {link: "http://goo.gl/forms/HXcQUylPzp", text: "Become a speaker"}
