--- a/app/_data/en/team/team-data.yml
+++ b/app/_data/en/team/team-data.yml
@@ -27,16 +27,19 @@
     - {name: "site", link: "http://www.traversoft.com"}
 -
   id: 3
-  name: "Scott"
+  name: "Scott A."
   surname: "Thisse"
-  company: "Centripetal Fusion"
-  title: "Co-Organizer, Founder Centripetal Fusion"
-  bio: "<Need>"
-  gdgTeam: true
+  company: "Centripetal Fusion LLC"
+  title: "Founder and Lead Developer"
   thumbnailUrl: ScottThisse.jpg
-  rockstar: true
+  gdgTeam: true
+  ribbon:
+    - {abbr: "GDG", title: "Google Developer Group"}
   social:
-    # - {name: "google-plus", link: "https://plus.google.com/+DawidOstrowski/"}
+    - {name: "google-plus", link: "https://plus.google.com/u/0/+ScottThisse"}
+    - {name: "github", link: "https://github.com/sathisse"}
+    - {name: "stack-overflow", link: "http://stackoverflow.com/users/2825864/scottt"}
+    - {name: "site", link: "http://www.meetup.com/Tampa-Bay-Android-Developers-Group/"}
 -
   id: 4
   name: "Angela"
