--- a/app/_data/en/general/footer.yml
+++ b/app/_data/en/general/footer.yml
@@ -12,7 +12,7 @@ blocks:
  -
   title: "Contacts"
   links:
-   - {link: "mailto:lviv@gdg.org.ua", text: "lviv@gdg.org.ua"}
+   - {link: "mailto:info@gdgsuncoast.org", text: "info@gdgsuncoast.org"}
  -
   title: "FAQ"
   links:
