--- a/app/_data/en/general/basic.yml
+++ b/app/_data/en/general/basic.yml
@@ -5,8 +5,8 @@ description: "GDG SunCoast is the Tampa Bay area chapter of the Google Developer
 enablePreloader: false
 
 # Head
-metaKeywords: "event, gdg, devfest, google, programming, android, chrome, developers, lviv"
-twitterAccount: "@DevFest"
+metaKeywords: "event, gdg, devfest, google, programming, android, chrome, developers, SunCoast, tampa"
+twitterAccount: "@GDGSunCoast"
 socialImageSrcGooglePlus: "/img/seo/sharing-google-plus.png"
 socialImageSrcTwitter: "/img/seo/sharing-twitter.png"
 socialImageSrcFacebook: "/img/seo/sharing-facebook.png"
@@ -16,7 +16,7 @@ themeColor: "#03a9f4"
 organizerName: "GDG SunCoast"
 organizerAlternateName: "Google Developer Group SunCoast"
 organizerDescription: "Open and volunteer geek communities who create exciting projects and share experience about Google technology with passion."
-organizerEmail: "lviv@gdg.org.ua"
+organizerEmail: "info@gdgsuncoast.org"
 organizerLogo: "/img/seo/organizer-logo.png"
 organizerLink: "http://www.gdgsuncoast.org"
 
@@ -25,7 +25,7 @@ c4pUrl: "http://goo.gl/forms/HeDDWzxqZX"
 c4pButton: "Become a speaker"
 
 # Varibles
-googleAnalyticsTrackingId: "UA-43643469-7"
+googleAnalyticsTrackingId: "UA-74956801-1"
 webtoolsSiteVerification: "b9imDOrFawXaBXCC4r3uJDdswSYcalD-wWpMYhFq-no"
 disqusShortName: "devfestua"
 
