StudyJam completed at Wave

--- a/app/_data/en/general/basic.yml
+++ b/app/_data/en/general/basic.yml
@@ -1,6 +1,6 @@
 # Site Settings
 title: "GDG SunCoast"
-email: "members@scgtug.org"
+email: "info@gdgsuncoast.org"
 description: "GDG SunCoast is the Tampa Bay area chapter of the Google Developer Groups"
 enablePreloader: false
 
