--- a/app/_data/en/index/partners.yml
+++ b/app/_data/en/index/partners.yml
@@ -2,4 +2,4 @@ title: "Sponsors"
 organizersTitle: "Sponsors"
 background-image: "partner-background.jpg"
 c4sponsorsButton: "Become a sponsor"
-c4sponsorsUrl: "/files/GDG_DevFest_Partnership.pdf"
+c4sponsorsUrl: "http://goo.gl/forms/dfJ04EKvTn"
