--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,10 @@ show_drafts: true
 markdown: kramdown
 
 # Site settings
-baseurl: "/"
-url: "http://gdgsuncoast.github.io"
+baseurl: ""
+url: "//gdgsuncoast.org"
+# baseurl: ""
+# url: "http://localhost:9000/gdgsuncoast"
 permalink: '/blog/:title'
 
 # i18n
