--- a/app/_data/en/index/rockstar-speakers.yml
+++ b/app/_data/en/index/rockstar-speakers.yml
@@ -1,4 +1,4 @@
 image: "rockstar-speakers.jpg"
-title: "Rockstar speakers"
+title: "'Usual Suspects' Speaker Gallery"
 count: 4
 buttonText: "See all speakers"
