--- a/app/_data/en/index/location-map.yml
+++ b/app/_data/en/index/location-map.yml
@@ -1,16 +1,31 @@
 title: "Study Jam <h4>Beginning Android Development</h4>"
-name: "Tampa Bay WaVE Event Space"
-link: "http://www.tampabaywave.org"
-streetAddress: "500 E Kennedy Blvd, 3rd Floor"
-addressLocality: "Tampa, FL 33602"
+# name: "Tampa Bay WaVE Event Space"
+# link: "http://www.tampabaywave.org"
+# streetAddress: "500 E Kennedy Blvd, 3rd Floor"
+# addressLocality: "Tampa, FL 33602"
+# addressLocalityRegion: "Florida"
+# postalCode: "33602"
+# addressCountry: "United States"
+# # timeTitle: "Hack through"
+# startTime: ""
+# # doorTime: "09:00"
+# endTime: ""
+# viewOnMap: "View on Google Maps"
+# placeCoordinates: "27.948593,-82.4582787"
+# centerCoordinates: "27.948593,-82.4582787"
+# mobileCenterCoordinates: "27.948593,-82.4582787"
+name: "SMARTstart Business Incubator"
+link: "http://pascoedc.com/incubator/"
+streetAddress: "6345 Grand Blvd"
+addressLocality: "New Port Richey, FL 34653"
 addressLocalityRegion: "Florida"
-postalCode: "33602"
+postalCode: "34652"
 addressCountry: "United States"
 # timeTitle: "Hack through"
 startTime: ""
 # doorTime: "09:00"
 endTime: ""
 viewOnMap: "View on Google Maps"
-placeCoordinates: "27.948593,-82.4582787"
-centerCoordinates: "27.948593,-82.4582787"
-mobileCenterCoordinates: "27.948593,-82.4582787"
+placeCoordinates: "28.250823,-82.7223426"
+centerCoordinates: "28.250823,-82.7223426"
+mobileCenterCoordinates: "28.250823,-82.7223426"
