--- a/app/_data/en/index/venue.yml
+++ b/app/_data/en/index/venue.yml
@@ -1,7 +1,14 @@
+# title: "Venue"
+# bigImage: "wave-1.jpg"
+# smallImage1: "wave-2.jpg"
+# smallImage2: "wave-3.jpg"
+# smallImage3: "wave-4.jpg"
+# venueTitle: "Tampa Bay WaVE"
+# venueFeatures: ["Host to many of our events Tampa Bay Wave is located at 500 E Kennedy Blvd, 3rd Floor, Tampa, FL 33602"]
 title: "Venue"
-bigImage: "wave-1.jpg"
-smallImage1: "wave-2.jpg"
-smallImage2: "wave-3.jpg"
-smallImage3: "wave-4.jpg"
-venueTitle: "Tampa Bay WaVE" 
-venueFeatures: ["Host to many of our events Tampa Bay Wave is located at 500 E Kennedy Blvd, 3rd Floor, Tampa, FL 33602"]
+bigImage: "smartstart-1.png"
+smallImage1: "smartstart-2.jpg"
+smallImage2: "smartstart-3.jpg"
+smallImage3: "smartstart-4.jpg"
+venueTitle: "SMARTstart Business Incubator"
+venueFeatures: 
