Updated image names

--- a/app/_data/en/index/venue.yml
+++ b/app/_data/en/index/venue.yml
@@ -6,9 +6,9 @@
 # venueTitle: "Tampa Bay WaVE"
 # venueFeatures: ["Host to many of our events Tampa Bay Wave is located at 500 E Kennedy Blvd, 3rd Floor, Tampa, FL 33602"]
 title: "Venue"
-bigImage: "smartstart-1.png"
+bigImage: "smartstart-1.jpg"
 smallImage1: "smartstart-2.jpg"
 smallImage2: "smartstart-3.jpg"
-smallImage3: "smartstart-4.jpg"
+smallImage3: "smartstart-4.png"
 venueTitle: "SMARTstart Business Incubator"
-venueFeatures: 
+venueFeatures:
